Anoop | #0 | Fixed UI issues in scrollbar

--- a/tama.web/src/main/webapp/styles/standard.css
+++ b/tama.web/src/main/webapp/styles/standard.css
@@ -424,7 +424,6 @@ fieldset th {
 
 .submit input {
     border: 1px solid #BBBBBB;
-    font-size:11px;
     text-transform:uppercase;
 }
 
